Abstraction of creating program card ImageButtons and abstraction of eventlistener into CardInputListener